--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "license": "MIT",
   "dependencies": {
     "ejs": "^3.1.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "moment": "^2.29.0",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "node-sass": "^4.14.1"
